FRONTEND: Fixes onFocus + Align logo in header

--- a/sass/elements/_header.scss
+++ b/sass/elements/_header.scss
@@ -5,7 +5,7 @@
   width: 100vw;
 
   .brand{
-    margin:7px auto 0 auto;
+    margin:4px auto 0 auto;
     cursor: pointer;
   }
 
